--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -11,9 +11,15 @@
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/futura-lt" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/sub.css">
+
+  <link rel="stylesheet" href="../css/style.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/style_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/header.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/header_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/sub.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/sub_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/grid.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/grid_mb.css" media="screen and (max-width:900px)">
   <!-- <link rel="stylesheet" href="../css/style_nav.css"> -->
 </head>
 
@@ -50,7 +56,7 @@
               </li>
               <li class="contents-click">
                 <h1>Contents</h1>
-                <div class="g-nav-contents-box none">
+                <div class="g-nav-contents-box none2">
                   <ul class="g-nav-contents">
                     <li>
                       <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
@@ -101,7 +107,7 @@
           </div>
           <div class="exp-box">
             <h3>Concept</h3>
-            <h3>それぞれの休息とちょうどいい時間を！</h3>
+            <h3 class="concept">それぞれの休息とちょうどいい時間を！</h3>
           </div>
           <div class="exp-box">
             <h3>Item / Time required</h3>
@@ -373,17 +379,26 @@
         <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
       </div>
     </div>
-
+  </div>
 
     <footer id="footer">
-      <p id="page-top"><a href="#">
-          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-        </a></p>
+      <div class="footer">
+        <button id="topbtn6" class="btn">
+          <div class="emblem1">topback.topback・</div>
+        </button>
+        <div class="contact">
+          <p>SUZUKI AOI</p>
+          <p><a href="tel:08060592067">080-6059-2067</a></p>
+          <p><a href="mailto:aoi.s9651@gmail.com">aoi.s9651@gmail.com</a></p>
+        </div>
+      </div>
     </footer>
 
 
-  </div>
-  </div>
+
+
+
+
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
