--- a/index_2.html
+++ b/index_2.html
@@ -56,7 +56,7 @@
             </li>
             <li class="contents-click">
               <h1>Contents</h1>
-              <div class="g-nav-contents-box none">
+              <div class="g-nav-contents-box none2">
                 <ul class="g-nav-contents">
                   <li>
                     <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
@@ -94,7 +94,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/logo_01.png" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Logo</h3>
+              <h3>1.bird coffee<br>-Logo</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -105,7 +105,7 @@
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo1.png" alt="">
             <span class="cap">
-              <h3>5.Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center-Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -116,7 +116,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/Free-Three-Subway-Station-Poster-Mockup_top.jpg" alt="">
             <span class="cap">
-              <h3>3.どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？-Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -127,7 +127,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_red1.jpg" alt="">
             <span class="cap">
-              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ<br>-Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -138,7 +138,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/tennnoharuka_package_top.jpg" alt="">
             <span class="cap">
-              <h3>4.天ノはるか -Package</h3>
+              <h3>4.天ノはるか<br>-Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -149,7 +149,7 @@
           <span class="mask-jo">
             <img src="image/JOYL/Joyl_shizuku.jpg" alt="">
             <span class="cap">
-              <h3>6.JOYL ひとさじの旬</h3>
+              <h3>6.JOYLひとさじの旬</h3>
               <h6>Newspaper Ads</h6>
             </span>
           </span>
@@ -169,7 +169,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/bc_poster_yoko3.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Poster</h3>
+              <h3>1.bird coffee<br>-Poster</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -181,7 +181,7 @@
           <span class="mask-kp">
             <img src="image/konpake/02 Free Minimal Macbook Pro Mockup_4.jpg" alt="">
             <span class="cap">
-              <h3>2.こんなにかわいいパッケージ -Website</h3>
+              <h3>2.こんなにかわいいパッケージ<br>-Website</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -192,7 +192,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_A3wide.jpg" alt="">
             <span class="cap">
-              <h3>3.どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？-Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -203,7 +203,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/天ノはるか.png" alt="">
             <span class="cap">
-              <h3>4.天ノはるか -Typography</h3>
+              <h3>4.天ノはるか<br>-Typography</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -241,7 +241,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_1.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Package</h3>
+              <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -252,7 +252,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Package</h3>
+              <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -263,7 +263,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_3.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Package</h3>
+              <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -274,7 +274,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_4.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Package</h3>
+              <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -285,7 +285,7 @@
           <span class="mask-kp">
             <img src="image/konpake/Outdoor_Poster_Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ<br>-Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -296,7 +296,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_icon.jpg" alt="">
             <span class="cap">
-              <h3>3.どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？-Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -307,7 +307,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/tennnoharuka_package_1.jpg" alt="">
             <span class="cap">
-              <h3>4.天ノはるか -Package</h3>
+              <h3>4.天ノはるか<br>-Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -348,7 +348,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/iphone-15-pro-on-white-background-v6-front-view_2.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Website</h3>
+              <h3>1.bird coffee<br>-Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -381,7 +381,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/top_logo_planB.jpg" alt="">
             <span class="cap">
-              <h3>4.天ノはるか -Package</h3>
+              <h3>4.天ノはるか<br>-Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -419,7 +419,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/02 Free Minimal Macbook Pro Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>1.bird coffee -Website</h3>
+              <h3>1.bird coffee<br>-Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -489,11 +489,9 @@
         <div class="emblem5">topback・topback・</div>
       </button>
       <div class="contact">
-        <p>
-          SUZUKI AOI<br>
-          080 6059 2067<br>
-          aoi.s9651@gmail.com
-        </p>
+        <p>SUZUKI AOI</p>
+        <p><a href="tel:08060592067">080-6059-2067</a></p>
+        <p><a href="mailto:aoi.s9651@gmail.com">aoi.s9651@gmail.com</a></p>
       </div>
     </div>
   </footer>
