--- a/content/profile.html
+++ b/content/profile.html
@@ -14,10 +14,16 @@
   <link href="https://fonts.cdnfonts.com/css/futura-lt" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/sub.css">
-  <link rel="stylesheet" href="../css/profile.css">
+  <link rel="stylesheet" href="../css/style.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/style_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/header.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/header_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/sub.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/sub_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/grid.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/grid_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="../css/profile.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="../css/mobile/profile_mb.css" media="screen and (max-width:900px)">
   <!-- <link rel="stylesheet" href="../css/style_nav.css"> -->
   <script>
     (function (d) {
@@ -85,7 +91,7 @@
               </li>
               <li class="contents-click">
                 <h1>Contents</h1>
-                <div class="g-nav-contents-box none">
+                <div class="g-nav-contents-box none2">
                   <ul class="g-nav-contents">
                     <li>
                       <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
@@ -204,9 +210,9 @@
             2023.11~2024.5<br>株式会社クリエイターズアカデミー
           </h6>
         </div>
-        <div class="exp-box">
+        <div class="exp-box skill">
           <h3>Skill</h3>
-          <ul class="skill">
+          <ul>
             <h6>
               <li>
                 Adobe Illustrator
@@ -295,57 +301,69 @@
           </ul>
         </div>
       </div>
-
-      <div class="back-moji luxy-el" data-speed-y="-60">
-        <img src="../image/profile/2_moji.png" alt="">
-      </div>
       <div class="important-box">
         <h1>Important<br>values in life.</h1>
       </div>
-        <div class="value-box">
-          <div class="item_1">
-            <img src="../image/profile/value_1.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_2.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_moji_1.png" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_3.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_4.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_moji_2.png" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_5.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_p.png" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_6.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_7.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_8.jpg" alt="">
-          </div>
-          <div class="item_1">
-            <img src="../image/profile/value_moji_3.png" alt="">
-          </div>
+      <div class="value-box">
+        <div class="item_1">
+          <img src="../image/profile/value_1.jpg" alt="">
         </div>
-        <div class="identity-box">
-          <h1>Identity</h1>
-          <img src="../image/profile/identity.png" alt="">
+        <div class="item_1">
+          <img src="../image/profile/value_2.jpg" alt="">
         </div>
+        <div class="item_1">
+          <img src="../image/profile/value_moji_1.png" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_3.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_4.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_moji_2.png" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_5.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_p.png" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_6.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_7.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_8.jpg" alt="">
+        </div>
+        <div class="item_1">
+          <img src="../image/profile/value_moji_3.png" alt="">
+        </div>
+      </div>
+      <div class="identity-box">
+        <h1>Identity</h1>
+        <h6>
+          小さい頃から、様々なものに興味関心がありました。多趣味、飽き性、様々な表現がありますが、長所として考える全ての共通点は”美しいと思えること”でした。それがものであっても、体験であっても、そこに一際価値があると感じたものを強く愛し、自分の価値観として大切にしてきました。<br>これまでの人生で自分が受け取ってきた、今もなお意識的にインプットし続けている感覚を、体験として目に見える表現として昇華させる。その具象に出会う人々の喜びを広げる、そんな力を持つものをつくるために、デザインを学び続けています。
+        </h6>
+        <!-- <img src="../image/profile/identity.png" alt=""> -->
+      </div>
     </div>
   </div>
+
+  <footer id="footer">
+    <div class="footer">
+      <button id="topbtn6" class="btn">
+        <div class="emblem1">topback・topbac・</div>
+      </button>
+      <div class="contact">
+        <p>SUZUKI AOI</p>
+        <p><a href="tel:08060592067">080-6059-2067</a></p>
+        <p><a href="mailto:aoi.s9651@gmail.com">aoi.s9651@gmail.com</a></p>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
