--- a/content/profile.html
+++ b/content/profile.html
@@ -305,40 +305,40 @@
         <h1>Important<br>values in life.</h1>
       </div>
       <div class="value-box">
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_1.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_2.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_moji_1.png" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_3.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_4.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_moji_2.png" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_5.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_p.png" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_6.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_7.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger">
           <img src="../image/profile/value_8.jpg" alt="">
         </div>
-        <div class="item_1">
+        <div class="item_1 fadeUpTrigger delay-time2">
           <img src="../image/profile/value_moji_3.png" alt="">
         </div>
       </div>
