--- a/index_2.html
+++ b/index_2.html
@@ -258,7 +258,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time1 bgUD">
+      <div class="top-item fadeUpTrigger delay-time1 bgUD box-35">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_3.jpg" alt="">
@@ -269,7 +269,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3 bgUD ">
+      <div class="top-item fadeUpTrigger delay-time3 bgUD box-36">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_4.jpg" alt="">
@@ -354,7 +354,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger bgUD">
+      <div class="top-item fadeUpTrigger bgUD box-42">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_logo.jpg" alt="">
