--- a/content/EOEC.html
+++ b/content/EOEC.html
@@ -83,7 +83,7 @@
             </div>
             <ul class="g-nav-main">
               <li>
-                <a href="../index_2.html">
+                <a href="../index.html">
                   <h1>Top</h1>
                 </a>
               </li>
