--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -47,7 +47,7 @@
           <div class="g-nav-box">
             <ul class="g-nav-main">
               <li>
-                <a href="../index_2.html">
+                <a href="../index.html">
                   <h1>Top</h1>
                 </a>
               </li>
