--- a/content/fukushima.html
+++ b/content/fukushima.html
@@ -82,7 +82,7 @@
             </div>
             <ul class="g-nav-main">
               <li>
-                <a href="../index_2.html">
+                <a href="../index.html">
                   <h1>Top</h1>
                 </a>
               </li>
