--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -187,6 +187,23 @@
             </li>
           </ul>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Diagram 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Diagram 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>1*1 Symbol mark</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Symbol + Logotype</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Color pattern</p>
+          </li>
+        </ul>
       </div>
       <div class="sec-2 top-mg" id="area-2">
         <div class="left-width">
@@ -231,6 +248,26 @@
             </ul>
           </div>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 3</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 4</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 2</p>
+          </li>
+        </ul>
       </div>
 
 
@@ -278,6 +315,26 @@
             </ul>
           </div>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 3</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 4</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 2</p>
+          </li>
+        </ul>
       </div>
 
       <div class="sec-4 top-mg" id="area-4">
@@ -342,6 +399,26 @@
             </ul>
           </div>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Paper Cup[Basic]</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Paper Cup[Seasonal]</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Takeout Food Label</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Stecker</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Ice Cream Cup</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Coffee Beans Bag</p>
+          </li>
+        </ul>
       </div>
       <div class="sec-6 top-mg" id="area-6">
         <div class="left-width">
@@ -355,7 +432,7 @@
               <p>Desktop MockUp</p>
             </li>
             <li class="p-goto-nav__list js-navList">
-              <p>iPone MockUp</p>
+              <p>iPhone MockUp</p>
             </li>
           </ul>
         </div>
@@ -372,8 +449,16 @@
         </div> -->
           </div>
         </div>
-
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Desktop MockUp</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>iPone MockUp</p>
+          </li>
+        </ul>
       </div>
+      <h3 class="comp">Comprehensive layout [Figma]</h3>
       <div class="right-width web-page">
         <img class="window" src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
         <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
