--- a/content/profile.html
+++ b/content/profile.html
@@ -345,7 +345,7 @@
       <div class="identity-box">
         <h1>Identity</h1>
         <h6>
-          小さい頃から、様々なものに興味関心がありました。多趣味、飽き性、様々な表現がありますが、長所として考える全ての共通点は”美しいと思えること”でした。それがものであっても、体験であっても、そこに一際価値があると感じたものを強く愛し、自分の価値観として大切にしてきました。<br>これまでの人生で自分が受け取ってきた、今もなお意識的にインプットし続けている感覚を、体験として目に見える表現として昇華させる。その具象に出会う人々の喜びを広げる、そんな力を持つものをつくるために、デザインを学び続けています。
+          小さい頃から、たくさんのものに興味関心がありました。多趣味、飽き性、様々な表現がありますが、長所として考える全ての共通点は”美しいと思えること”でした。それがものであっても、体験であっても、そこに一際価値があると感じたものを強く愛し、自分の価値観として大切にしてきました。<br>これまでの人生で自分が受け取ってきた、今もなお意識的にインプットし続けている感覚を、体験として目に見える表現として昇華させる。その具象に出会う人々の喜びを広げる、そんな力を持つものをつくるために、デザインを学んでいます。
         </h6>
         <!-- <img src="../image/profile/identity.png" alt=""> -->
       </div>
