--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a href="content/birdcoffee.html" class="btn01">
           <span class="mask-bc">
             <img src="image/bird_coffee/logo_01.png" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Logo</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -104,8 +104,8 @@
         <a href="content/EOEC.html" class="btn05">
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo1.png" alt="">
-            <span class="cap">
-              <h3>5.Enoshima Ocean Education Center-Logo</h3>
+            <span class="cap cap2">
+              <h3>5.Enoshima<br>Ocean Education Center</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -116,7 +116,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/Free-Three-Subway-Station-Poster-Mockup_top.jpg" alt="">
             <span class="cap">
-              <h3>3.どのしまにする？-Poster</h3>
+              <h3>3.どのしまにする?<br>-Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -168,7 +168,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/bc_poster_yoko3.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Poster</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -213,7 +213,7 @@
         <a href="content/EOEC.html">
           <span class="mask-eo">
             <img src="image/EOEC/Standard Business Card Mockup.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
@@ -240,7 +240,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_1.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -251,7 +251,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_2.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -262,7 +262,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_3.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -273,7 +273,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_4.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -317,7 +317,7 @@
         <a href="content/EOEC.html">
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo2.png" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
@@ -347,7 +347,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/iphone-15-pro-on-white-background-v6-front-view_2.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -407,7 +407,7 @@
         <a href="content/EOEC.html">
           <span class="mask-eo">
             <img src="image/EOEC/Tshirt.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
@@ -418,7 +418,7 @@
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/02 Free Minimal Macbook Pro Mockup_2.jpg" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>1.bird coffee<br>-Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
@@ -473,7 +473,7 @@
         <a href="content/EOEC.html">
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo_p3.png" alt="">
-            <span class="cap">
+            <span class="cap cap2">
               <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
