--- a/content/EOEC.html
+++ b/content/EOEC.html
@@ -214,6 +214,26 @@
             </ul>
           </div>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>1*1 Symbol mark</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Symbol + Logotype -A</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Symbol + Logotype -B</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Color pattern</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>T-shirts -MockUp</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Card -MockUp</p>
+          </li>
+        </ul>
       </div>
     </div>
 
