--- a/content/JOYL.html
+++ b/content/JOYL.html
@@ -123,7 +123,8 @@
 
     <div class="content-width">
       <div class="ct-title">
-        <h1>JOYL ひとさじの旬</h1>
+        <h1 class="joyl">JOYL ひとさじの旬</h1>
+        <h1 class="joyl_mb">JOYL<br>ひとさじの旬</h1>
       </div>
       <div class="sec-top">
         <div class="top-img left-width shizuku-icon">
@@ -155,11 +156,17 @@
       <div class="sec-1 top-mg" id="area-1">
         <div class="left-width before-img">
           <h1>Newspaper<br>Ads</h1>
-          <h3 class="joyl-before">Before</h3>
-          <img src="../image/JOYL/hitosaji_15d_Tama_0309.pdf" alt="">
+          <div class="joyl-before">
+            <h3>Before</h3>
+            <img src="../image/JOYL/hitosaji_15d_Tama_0309.pdf" alt="">
+          </div>
         </div>
         <div class="right-width joyl-img">
           <img src="../image/JOYL/Joyl_3.jpg" alt="">
+        </div>
+        <div class="joyl-before2">
+          <h3>Before</h3>
+          <img src="../image/JOYL/hitosaji_15d_Tama_0309.pdf" alt="">
         </div>
       </div>
 
