--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -458,7 +458,7 @@
           </li>
         </ul>
       </div>
-      <h3 class="comp">Comprehensive layout [Figma]</h3>
+      <h3 class="comp">Comprehensive layout<br>[Figma]</h3>
       <div class="right-width web-page">
         <img class="window" src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
         <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
