--- a/content/profile.html
+++ b/content/profile.html
@@ -217,84 +217,84 @@
               <li>
                 Adobe Illustrator
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_5.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_5.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
               <li>
                 Adobe Photoshop
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_5-2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_5-2.png" alt="" class="rotateTrigger delay-time1">
                 </div>
               </li>
               <li>
                 Adobe Indesign
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger delay-time1">
                 </div>
               </li>
               <li>
                 Visual Studio Code
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_5.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_5.png" alt="" class="rotateTrigger delay-time1">
                 </div>
               </li>
               <li>
                 Figma
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
               <li>
                 Git Hub
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
               <li>
                 HTML/CSS/Javascript
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
-                  <img src="../image/profile/star_5-2.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateTrigger delay-time1">
+                  <img src="../image/profile/star_5-2.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
               <li>
                 Vector Works
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY  delay-time1">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY  delay-time1">
-                  <img src="../image/profile/star_4-2.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger  delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger  delay-time1">
+                  <img src="../image/profile/star_4-2.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
               <li>
                 Bricks CAD
                 <div class="star">
-                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
-                  <img src="../image/profile/star_2.png" alt="" class="rotateY  delay-time1">
-                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateTrigger ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateTrigger  delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateTrigger ">
                 </div>
               </li>
             </h6>
