--- a/content/tennnoharuka.html
+++ b/content/tennnoharuka.html
@@ -211,7 +211,17 @@
             </ul>
           </div>
         </div>
-
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Plan A</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Plan A -MockUp</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Plan B</p>
+          </li>
+        </ul>
       </div>
     </div>
 
