--- a/content/fukushima.html
+++ b/content/fukushima.html
@@ -127,7 +127,8 @@
       </div>
       <div class="sec-top">
         <div class="top-img left-width">
-          <img src="../image/Fukushima/fukushima_icon.jpg" alt="">
+          <img src="../image/Fukushima/fukushima_icon_2.jpg" alt="" class="fuku-img">
+          <img src="../image/Fukushima/fukushima_A1.jpg" alt="" class="fuku-img_mb">
         </div>
         <div class="top-exp right-width">
           <div class="exp-box">
@@ -142,7 +143,7 @@
           </div>
           <div class="exp-box">
             <h3>Concept</h3>
-            <h3>どのしまにする？</h3>
+            <h3 class="concept">どのしまにする？</h3>
             <h6>
               福島県は日本で3番目に面積が広い。それぞれの行きたい場所や所有時間に応じて、JRを利用して満喫できるちょうどいいルートを提案してくれるサイトへ繋げるためのポスター。<br>福島県旅行の満足度を上げ、また満喫できると確信できることで、旅行者数の底上げと福島県全体の認知拡大・再訪を狙う。
             </h6>
@@ -182,20 +183,15 @@
             </li>
           </ul>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>B1 Poster</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp</p>
+          </li>
+        </ul>
       </div>
-      <!-- <div class="sec-1 top-mg" id="area-1">
-        <div class="left-width">
-          <h1>Poster</h1>
-          <h3>B1 W728*H1030</h3>
-        </div>
-        <div class="right-width">
-          <div class="img-position">
-            <img src="../image/Fukushima/fukushima_A1.jpg" alt="" class="fukushima-img">
-          </div>
-
-        </div>
-      </div>
-      <img src="../image/Fukushima/Free Three Subway Station Poster Mockup.jpg" alt="" class="fukushima-img-mock"> -->
 
       <div class="top-mg fk-copy">
         <div class="right-width">
@@ -234,6 +230,14 @@
             </li>
           </ul>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>B3 wide Poster</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp</p>
+          </li>
+        </ul>
       </div>
     </div>
 
