--- a/content/konpake.html
+++ b/content/konpake.html
@@ -91,6 +91,7 @@
     <div class="content-width">
       <div class="ct-title">
         <h1 class="konpake">こんなにかわいいパッケージ</h1>
+        <h1 class="konpake_mb">こんなに<br>かわいい<br>パッケージ</h1>
         <!-- <h6 class="sub-title">Such a adrable packaging.</h6> -->
       </div>
       <div class="sec-top">
@@ -180,6 +181,20 @@
             </li>
           </ul>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Symbol mark</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Diagram</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Logotype</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Envelope MockUp</p>
+          </li>
+        </ul>
       </div>
       <div class="sec-2 top-mg" id="area-2">
         <div class="left-width">
@@ -214,6 +229,20 @@
             </ul>
           </div>
         </div>
+        <ul class="p-goto-nav__lists2">
+          <li class="p-goto-nav__list js-navList">
+            <p>Flyer Red</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Flyer Yellow</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Flyer Blue</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster MockUp</p>
+          </li>
+        </ul>
       </div>
 
       <div class="sec-3 top-mg" id="area-3">
@@ -278,9 +307,27 @@
             <img src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
         </div> -->
           </div>
+          <ul class="p-goto-nav__lists2">
+            <li class="p-goto-nav__list js-navList">
+              <p>Desktop MockUp -Load</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Desktop MockUp -Post</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Desktop MockUp -Post Tag</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>iPone MockUp -Load</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>iPone MockUp -Post</p>
+            </li>
+          </ul>
         </div>
 
       </div>
+      <h3 class="comp">Comprehensive layout<br>[Figma]</h3>
       <div class="right-width web-page">
         <img class="window" src="../image/konpake/desktop_1.jpg" alt="">
         <img class="iphone" src="../image/konpake/iPhone_1.jpg" alt="">
