--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
               </a>
             </li>
             <li class="contents-click">
-              <h1>Contents</h1>
+              <h1 id="contents-button">Contents</h1>
               <div class="g-nav-contents-box none2">
                 <ul class="g-nav-contents">
                   <li>
-                    <h2><span class="circle">1</span><a href="../content/birdcoffee.html"> bird coffee</a></h2>
+                    <h2><span class="circle">1</span><a href="content/birdcoffee.html"> bird coffee</a></h2>
                   </li>
                   <li>
-                    <h2><span class="circle">2</span><a href="../content/konpake.html"> こんなにかわいいパッケージ</a></h2>
+                    <h2><span class="circle">2</span><a href="content/konpake.html"> こんなにかわいいパッケージ</a></h2>
                   </li>
                   <li>
-                    <h2><span class="circle">3</span><a href="../content/fukushima.html"> どのしまにする？</a></h2>
+                    <h2><span class="circle">3</span><a href="content/fukushima.html"> どのしまにする？</a></h2>
                   </li>
                   <li>
-                    <h2><span class="circle">4</span><a href="tennnoharuka.html"> 天のはるか</a></h2>
+                    <h2><span class="circle">4</span><a href="content/tennnoharuka.html"> 天のはるか</a></h2>
                   </li>
                   <li>
-                    <h2><span class="circle">5</span><a href="EOEC.html"> Enoshima Ocean Education Center</a></h2>
+                    <h2><span class="circle">5</span><a href="content/EOEC.html"> Enoshima Ocean Education Center</a></h2>
                   </li>
                   <li>
-                    <h2><span class="circle">6</span><a href="JOYL.html"> JOYL</a></h2>
+                    <h2><span class="circle">6</span><a href="content/JOYL.html"> JOYL ひとさじの旬</a></h2>
                   </li>
                 </ul>
               </div>
@@ -155,7 +155,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger box-23 delay-time2">
+      <div class="top-item fadeUpTrigger box-23 delay-time1">
         <button id="topbtn2" class="btn">
           <div class="emblem1">topback・topback・</div>
         </button>
@@ -504,7 +504,6 @@
   <script src="js/main.js"></script>
   <script src="js/load.js"></script>
   <script src="js/splash.js"></script>
-
 
 </body>
 
