--- a/content/konpake.html
+++ b/content/konpake.html
@@ -266,7 +266,7 @@
       <div class="sec-4 top-mg" id="area-4">
         <div class="left-width">
           <h1>Web site</h1>
-          <a href="../bird_coffee/top.html" target="_blank">
+          <a href="../konpake/index.html" target="_blank">
             <h5 class="site-icon">konnanikawaiipakkeiji.com<img width="25" height="25"
                 src="https://img.icons8.com/ios-glyphs/25/external-link.png" alt="external-link" /></h5>
           </a>
