--- a/konpake/index.html
+++ b/konpake/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="bg" class="back-img"></div>
+  <div class="back-img"></div>
   <div id="showloading">
     <!-- <p class="start">start</p> -->
     <div id="wrap">
@@ -76,6 +76,7 @@
     </header>
     
     <div id="contents">
+      <div id="bg" class="back-img-repeat"></div>
       <div id="insta" class=""></div>
     </div>
 
