--- a/bird_coffee/top.html
+++ b/bird_coffee/top.html
@@ -264,13 +264,13 @@
         <p class="small"><small>&copy;&nbsp;2024&nbsp;bird&nbsp;coffee&nbsp;company.</small></p>
         <div class="pay-logo">
           <ul>
-            <li><img src="image/_made/Master.png" alt="master card"></li>
+            <!-- <li><img src="image/_made/Master.png" alt="master card"></li>
             <li><img src="image/_made/AMEX.png" alt="AMEX"></li>
             <li><img src="image/_made/visa.png" alt="visa"></li>
             <li><img src="image/_made/JCB.png" alt="JCB"></li>
             <li><img src="image/_made/Paypay.png" alt="Paypay"></li>
             <li><img src="image/_made/LinePay.png" alt="LinePay"></li>
-            <li><img src="image/_made/ApplePay.png" alt="ApplePay"></li>
+            <li><img src="image/_made/ApplePay.png" alt="ApplePay"></li> -->
           </ul>
         </div>
       </div>
