--- a/content/profile.html
+++ b/content/profile.html
@@ -164,7 +164,7 @@
               <li class="point">
                 <dl>
                   <dt>
-                    <p>より自由な空間表現で感動を与える力をもつ、Production design, Art designに出会う。</p>
+                    <p>より自由な空間表現で感動を与える力をもつ、Prop design, Art designに出会う。</p>
                   </dt>
                 </dl>
                 <span class="border-line"></span>
@@ -178,7 +178,7 @@
               <li class="point">
                 <dl>
                   <dt>
-                    <p>暮らしの中で、ものや体験から受け取ることができる喜びを広げ、共有し、誰かの心が少しでも豊かになるような活動をしたい。</p>
+                    <p>暮らしの中で、ものや体験から受け取ることができる喜びを広げ、共有し、誰かの心が少しでも豊かになるような活動がしたい。</p>
                   </dt>
                 </dl>
                 <span class="border-line"></span>
@@ -203,7 +203,7 @@
         <div class="exp-box">
           <h3>Career</h3>
           <h6>
-            東北学院大学工学部にて建築を学ぶ。卒業後、株式会社イリアに入社。施工管理業務全般を担うコンストラクション部に所属。オフィス、商業施設の新築・リニューアル計画、計7現場を担当。主にプロジェクトのスケジュール・ディテール・品質の管理を行う。<br>2023年4月から広告・映像の美術デザイナーの下でアシスタント業務に携わる。企画打ち合わせから参画、プロップの選定、作り物のパッケージ制作など業務全般を遂行。2023年11月から株式会社クリエイターズアカデミーにてグラフィックデザイン・Webデザインについて学ぶ。
+            東北学院大学工学部にて建築を学ぶ。卒業後、株式会社イリアに入社。特殊内装のディレクション業務全般を担うコンストラクション部に所属。オフィス、商業施設の新築・リニューアル計画、計7現場を担当。主にプロジェクトのデザイン監修、コスト・スケジュール・品質の管理を行う。<br>2023年4月から広告・映像の美術デザイナーの業務委託でアシスタントを務める。企画打ち合わせから参画し、小道具の選定から、スタイリングまで業務全般を遂行。2023年11月から株式会社クリエイターズアカデミーにてグラフィックデザイン・Webデザインについて学ぶ。
           </h6>
           <h6 class="career">2019.4~2023.3<br>株式会社イリア<br>
             2023.4~2023.9<br>美術デザイナーアシスタント<br>
